# starccato_pca

./: .gitignore  README.rst  pyproject.toml
src/starccato_pca/: __init__.py  pca.py  starccato_pca.py
tests/: test_pca.py
